fixes overflow hidden issue

--- a/desert-explorer/desert-explorer.css
+++ b/desert-explorer/desert-explorer.css
@@ -60,7 +60,7 @@ main {
     /* grid-template-columns: repeat(8, 40px); */
     grid-gap: 1px;
     margin: auto;
-    overflow: hidden;
+    overflow: visible;
     /* margin-top: 20px; */
 }
 
